# pusan-clone

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md  README.md  app.py  conftest.py  environment.yml  invoke_test.py  poc-test.md  pyproject.toml  requirements.txt  run.sh  test_week2_addition.py  week03_tool_response_formats.md
.claude/: settings.local.json
.github/: pull_request_template.md
docs/: CLAUDE-FABLE-5.ko.md  CURRICULUM.md  tool_functions_guide.md  week01-plans.md  week02_structured_output_오류해결.md  week02_작업정리.md  week02_프록시_pending_오류해결.md  week02_프롬프트충돌_중복호출_오류해결.md  week03.md  week03_작업정리.md  week04.md  week04_작업정리.md  week1_0702_class.md  week3_review_response.md  week4_concept_notes.md
fixed/: agent_runtime.py  app_store.py  config.py  conversation_rag_store.py  external_mcp.py  external_people_store.py  langchain_trace.py  llm.py  mcp_client.py  reference_store.py  runtime_clock.py  schedule_decision.py  session_scope.py  store_base.py  trace.py  week_agent_registry.py
mcp_server/: sqlite_mcp_server.py
static/: app.css
student_parts/: __init__.py  test_add_personal_ref.py  test_duplicate.py  test_extract.py  test_search_personal.py  test_search_personal_refhits.py  test_sql.py  test_store.py  week01_wake_up_nana.py  week02_structure_natural_language_requests.py  week03_build_nanas_logbook.py  week04_retrieve_nanas_memory.py
student_parts_baseline/: week01_wake_up_nana.py  week02_structure_natural_language_requests.py  week03_build_nanas_logbook.py
tests/: conftest.py  test_delete_saved_schedules.py  test_field_validators.py  test_maybe_upgrade_to_group.py  test_week01.py  test_week01_personal_tools.py  test_week02.py  test_week02_schema.py  test_week02_structure.py  test_week02_structure_natural_language_requests.py  test_week03.py  test_week03_build_nanas_logbook.py  test_week03_e2e_crud.py  (+4 more)
(+7 files in other folders)
