[project]
name = "kanana-schedule-agent"
version = "0.1.0"
description = "Kanana lecture schedule agent project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=0.5",
    "gradio>=6.0",
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.1",
    "langchain-openai>=1.0",
    "mcp>=1.9",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]